# KahneBench

./: .gitignore  AGENT_GUIDE.md  ARXIV_AUDIT_REPORT.md  AUDIT_RESULTS_ANALYSIS.md  CLAUDE.md  HANDOFF_20260209.md  LICENSE  README.md  pyproject.toml  run_all_models.sh  sonnet45_core_fingerprint_v2.json
deprecated_results/: fingerprint.json  fingerprint_anthropic.json  fingerprint_fireworks.json  fingerprint_gemini.json  fingerprint_openai.json  fingerprint_sonnet.json  fingerprint_sonnet45.json  fingerprint_sonnet_v2.json  fingerprint_sonnet_v3.json  fingerprint_xai.json  pilot_fingerprint.json  pilot_tests.json  results_anthropic.json  results_fireworks.json  results_gemini.json  results_openai.json  results_xai.json  sonnet45_core_fingerprint.json  sonnet45_core_tests.json  sonnet45_core_tests_v2.json  test_subset.json
docs/: AUDIT_FIX_SPEC.md  BENCHMARK_IMPROVEMENTS.md  CRITICISM_PROOFING_STATUS.md  HANDOFF_20260117_133934.md  IMPROVEMENT_TRACKER.md  KAHNEBENCH_PREP_CHECKLIST.md  Kahne-Bench_ A Framework for Implementing the Kahneman-Tversky Behavioral Bias Benchmark in Python.md  LIMITATIONS.md
examples/: basic_usage.py  openai_evaluation.py
reports/: COSTS_NOTE_2026-02-12.md  bias_test_quality_fixes_2026-02-12.md  documentation_accuracy_review.md  evaluation_pipeline_review.md  metrics_correctness_review.md  pilot_analysis_2026-02-14.md  pre_publication_audit_2026-02-14.md  pre_publish_fix_handoff_2026-02-14.md  publication_readiness_review.md  scientific_validity_review.md  test_coverage_review.md
run/: 01_sonnet45.sh  02_haiku45.sh  03_opus46.sh  04_gpt52.sh  05_glm47.sh  06_minimax.sh  07_deepseek.sh  08_kimi.sh  09_gemini.sh  10_grok.sh  common.sh  run_all_parallel.sh
scripts/: export_samples_for_website.py
tests/: __init__.py  test_advanced_generators.py  test_bloom_generator.py  test_cli.py  test_evaluator.py  (+9 more)
(+25 files in other folders)
